crates/toml/tests/snapshots/invalid/float/leading-dot-neg.stderr
TOML parse error at line 1, column 19
  |
1 | leading-dot-neg = -.12345
  |                   ^
invalid mantissa, expected digits

---
TOML parse error at line 1, column 19
  |
1 | leading-dot-neg = -.12345
  |                   ^^^^^^^
invalid float, expected nothing
